# pam_keyboard_auth

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pam_keyboard.c  test_emu.c  test_keyboard.c  test_lock.c  test_read.c  test_read_epoll.c
pam-config/: keyboard
